# SnapAnalyst

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW_TRAINING.md  CHROMADB_ANALYSIS.md  CHROMADB_CLEANUP_COMPLETE.md  CLAUDE.md  CODE_ENRICHMENT_FEATURE.md  CONTEXT_TRAINING_RECOMMENDATIONS.md  CONTRIBUTING.md  DIRECT_SQL_FEATURE.md  DYNAMIC_SUMMARY_CONFIG.md  EDITABLE_SAMPLES_FEATURE.md  FINAL_SOLUTION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_STATUS_EXPLANATION.md  README.md  SECURITY.md  SEPARATOR_PATTERN_PHASE1.md  STARTUP_GUIDE.md  SUMMARY_FIX_RECOMMENDATIONS.md  TEST_RESULTS.md  TEST_RESULTS_COMPLETE.md  TEST_SUMMARY.md  TRAINING_RECOMMENDATION.md  TRAINING_TOGGLE_FEATURE.md  UNIT_TEST_SUMMARY.md  UPLOAD_FEATURE.md  WEB_UI_RECOMMENDATIONS.md  chainlit.md  chainlit_app.py  clear_all_caches.sh  data_mapping.json  docker-compose.yml  export_schema.sh  inspect_logo.html  pyproject.toml  query_examples.json  (+12 more)
.chainlit/: config.toml
.chainlit/translations/: en-US.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  codeql.yml
datasets/: __init__.py  base.py  registry.py
datasets/_template/: README.md  __init__.py  config.yaml  data_mapping.json  query_examples.json
datasets/snap/: __init__.py  config.yaml  data_mapping.json  query_examples.json  reference.txt  schema.sql
datasets/snap/prompts/: kb_system_prompt.txt  sql_system_prompt.txt  summary_system_prompt.txt
datasets/snap/training/: business_context.md  query_examples.json
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
docs/: API.md  AZURE_OPENAI_SETUP.md
migrations/: add_user_prompts.py
public/: custom.css  custom.js
public/css/: chainlit_ui.css  custom.css  tabulator_combined.css
public/elements/: DatabasePanel.jsx  FilterPanel.jsx  LlmPanel.jsx  MemPanel.jsx  MemsqlPanel.jsx  ReadmePanel.jsx  SettingsPanel.jsx
public/js/: chainlit_ui.js  main.js  tabulator_bundle.js  tabulator_init.js
requirements/: base.txt  dev.txt  test.txt
schema_exports/: code_lookups.md  tables.md
scripts/: docker_init_data.py  download_data.sh  init_chainlit_db.py  run_integration_tests.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routers/: chatbot.py  data_export.py  data_loading.py  files.py  filter.py  llm.py  management.py  query.py  schema.py  schema_exports.py
src/api/utils/: data_export.py  schema_export.py  schema_introspection.py
src/clients/: __init__.py  api_client.py
src/core/: __init__.py  config.py  exceptions.py  filter_manager.py  logging.py  prompts.py
src/database/: __init__.py  ddl_extractor.py  engine.py  init_database.py  models.py  populate_references.py  prompt_manager.py  reference_models.py  schemas.py
src/etl/: __init__.py  loader.py  reader.py  transformer.py  validator.py  writer.py
src/services/: __init__.py  ai_summary.py  code_enrichment.py  insight_context_builder.py  insight_service.py  kb_chromadb.py  llm_providers.py  llm_service.py  llm_training.py  model_registry.py  statistics_service.py
src/utils/: __init__.py  column_mapping.py  kb_filter_parser.py  sql_validator.py  tag_parser.py
tests/: __init__.py  conftest.py.disabled  test_filter_manager.py.disabled
tests/data/: generate_test_csv.py  test.csv
tests/integration/: __init__.py  test_api_integration.py  test_concurrency.py  test_database_integration.py
tests/unit/: conftest.py  test_ai_summary.py  test_api_client.py  test_code_enrichment.py  test_column_mapping.py  test_config.py  test_engine.py  test_etl_loader.py  test_feedback_training.py  test_filter_manager.py  test_integration_real_data.py  test_kb_filter_parser.py  test_llm_providers.py  test_logging.py  test_prompt_manager.py  test_prompts.py  test_query_router.py.disabled  test_reader.py  test_reader.py.disabled  test_reader_simple.py  test_schemas.py  test_sql_validator.py  test_tag_parser.py  test_thread_safety.py  test_transformer.py  test_transformer_simple.py  test_validator.py.disabled  test_validator_simple.py
ui/: __init__.py  config.py  data_layer.py  formatters.py  responses.py
ui/handlers/: __init__.py  actions.py  commands.py  queries.py  settings.py
ui/handlers/commands/: __init__.py  data_commands.py  info_commands.py  memory_commands.py  memsql_commands.py  prompt_commands.py  router.py  utility_commands.py
ui/services/: __init__.py  feedback_training.py  startup.py  thread_context.py
utils/: start_all.sh  stop_all.sh
