[project]
name = "snapanalyst"
version = "0.1.0"
description = "AI-powered SNAP Quality Control data analysis platform with natural language query interface"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["snap", "food-stamps", "data-analysis", "ai", "natural-language", "sql", "fastapi", "chainlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database :: Front-Ends",
]

[project.urls]
Homepage = "https://github.com/stperic/SnapAnalyst"
Documentation = "https://github.com/stperic/SnapAnalyst#readme"
Repository = "https://github.com/stperic/SnapAnalyst"
Issues = "https://github.com/stperic/SnapAnalyst/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "ui*", "datasets*"]

# Ruff - Fast Python linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "ui", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in handlers)
    "ARG002", # unused method argument (interface requirements, stubs)
    "F841",   # unused variable (common in test setup)
    "SIM117", # nested with statements (acceptable for clarity)
]

[tool.ruff.lint.per-file-ignores]
"chainlit_app.py" = ["E402"]  # Imports after logging setup
"verify_schema_separation.py" = ["E402"]  # Imports after path setup
"tests/**/*.py" = ["ARG002", "F841"]  # Test fixtures and unused variables

[tool.ruff.lint.isort]
known-first-party = ["src", "ui", "datasets", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy - Static type checker
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "tests",
    "migrations",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Pytest - Testing framework
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "auto"

# Coverage - Code coverage
[tool.coverage.run]
source = ["src", "ui"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
